workspace = { members = [ "base", "common", "example","server-api", "server-manage"] }
[package]
name = "blog-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plier = {path = "../../plier-rs"}
i_dao = "0.1.3"
i_dao_proc_macro = "0.1.0"
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tracing = "0.1"
tracing-subscriber = "0.3"
mysql = "25.0.0"
r2d2_mysql = "24.0.0"
lazy_static = "1.4.0"

