[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../base" }
plier = {path = "../../../plier-rs"}
axum = "0.7.5"
hyper = "1.3.1"
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4.21"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
http-body-util = "0.1.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
lazy_static = "1.4.0"
once_cell = "1.5"
fred = "9.0.1"

