[package]
name = "server-manage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
plier = {path = "../../../plier-rs"}
log = "0.4.21"
log4rs = "1.3.0"
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tracing = "0.1"
tracing-subscriber = "0.3"
i_dao = "0.1.3"
i_dao_proc_macro = "0.1.0"
mysql = "25.0.0"
r2d2_mysql = "24.0.0"
lazy_static = "1.4.0"
iconf = "0.1.2"